--- a/base-project-backend/src/main/resources/application.properties
+++ b/base-project-backend/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/base_app
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=cost#123$
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.properties.hibernate.show_sql=TRUE
